--- a/thesis/01Wprowadzenie.tex
+++ b/thesis/01Wprowadzenie.tex
@@ -7,36 +7,39 @@
 \subsection{Problem}
 \label{Chapter111}
 
-Podstawą każdej działalności jest warunkująca ją potrzeba. Niemożliwą jest jednak analiza potrzeb, bez wcześniejszego ich zbadania. Najłatwiejszą i najbardziej rozpowszechnioną metodą pozyskiwania wiedzy na jakiś temat jest pytanie o to osób związanych ze sprawą. Kiedy pytań jest wiele, a liczba potencjalnych respondentów osiąga niewyobrażalny poziom, zadawanie pytań wymaga usystematyzowania, podobnie, jak metodyka ich dostarczania do odpowiadających, czy gromadzenia odpowiedzi. Takie rozumowanie prowadzi do niezwykłego narzędzia badań, pozwalającego na gromadzenie danych - ankiety. \\
+Podstawą każdej działalności jest warunkująca ją potrzeba. Niemożliwą jest jednak analiza potrzeb, bez wcześniejszego ich zbadania. Najłatwiejszą i najbardziej rozpowszechnioną metodą pozyskiwania wiedzy na jakiś temat jest pytanie o to osób związanych ze sprawą. Kiedy pytań jest wiele, a liczba potencjalnych respondentów osiąga poziom kilkudziesięciu tysięcy osób, zadawanie pytań wymaga usystematyzowania. Podobnie wygląda kwestia metodyki ich dostarczania do odpowiadających oraz gromadzenia odpowiedzi. Rozwiązaniem tego zagadnienia jest równie proste, co skuteczne narzędzie badań, pozwalające na gromadzenie danych - ankieta. \\
 
-Ankieta pozwala na nieinwazyjne, anonimowe i masowe pozyskiwanie opinii respondentów na zadany temat, a dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście jednostki szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezbędne do zapewnienia prawidłowej pracy. Bez informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości sprawdzenia poprawności podejmowanych działań, co w efekcie zawsze będzie prowadzić do spiętrzającej się fali problemów. Przykładem może być sytuacja, gdy nie posiadając wiedzy o nieodpowiednim, zdaniem studentów i prowadzących zajęcia, wyposażeniu sali laboratoryjnej, władze uczelni ustalają harmonogram zajęć, zwiększający obciążenie tego pomieszczenia. Efektem takiego działania byłby spadek jakości kształcenia studentów korzystających z tego laboratorium. \\
+Ankieta pozwala na nieinwazyjne, anonimowe i masowe pozyskiwanie opinii respondentów na zadany temat, a dzięki zastosowaniu różnych metod statystycznych, także na ocenę zdania całej populacji. W kontekście każdej jednostki, zrzeszającej większą grupę osób, jak zakład pracy, czy jednostka szkolnictwa wyższego, jaką jest Politechnika Poznańska, ankietowanie jest niezwykle potrzebne, celem zapewnienia prawidłowej pracy. Bez informacji zwrotnej (ang.~\definicja{feedback}) praktycznie nie ma możliwości precyzyjnej analizy poprawności podejmowanych działań, co w efekcie zawsze będzie prowadzić do spiętrzającej się fali problemów. Za przykład może posłużyć sytuacja, gdy nie posiadając wiedzy o nieodpowiednim (zdaniem studentów i prowadzących zajęcia) wyposażeniu sali laboratoryjnej, władze uczelni ustalają harmonogram zajęć, zwiększający obciążenie tego pomieszczenia. Efektem takiego działania byłby spadek jakości kształcenia studentów korzystających z tego laboratorium. \\
 
-W ostatnich latach\footnote{Mowa o okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o swoim działaniu i oferowanych usługach. Niestety, gros z nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i Zarządzania} poddawany był ankietom: elektronicznym na poziomie Uczelni, jak i Wydziału, ,,papierowym'' na poziomie Uczelni oraz Samorządu Studentów, a ponadto dodatkowej ankietyzacji w ramach niektórych zajęć dydaktycznych. Co gorsza, żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do zapewnienia wymierności ich wyników (jak np.~zapewnienie, aby nikt nie wziął w ankiecie udziału więcej niż jeden raz, czy uniemożliwienie wypełnienia ankiety przeznaczonej dla innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak ich mnogość i dezorientacja, kto tak naprawdę pozyskuje informacje, działały tu na niekorzyść ankietujących. Ważnym jest też fakt, że istniała tylko jedna grupa docelowa -- studenci Politechniki Poznańskiej. \\
+W ostatnich latach\footnote{Mowa o okresie 2008-2013, który jest znany autorom niniejszej Pracy Dyplomowej.} Politechnika Poznańska posiadała szerokie spektrum narzędzi do pozyskiwania wiedzy o swoim działaniu i oferowanych usługach, funkcjonujących w zgodzie ze Statutem Politechniki Poznańskiej\footnote{Zapis odnośnie dokonywania oceny nauczyciela akademickiego z uwzględnieniem oceny studentów\cite{AP:SPP11}.}. Niestety, gros z nich wzajemnie się wykluczał. Przykładowy student na Wydziale Informatyki\footnote{Do 2010 roku -- Wydziale Informatyki i Zarządzania} poddawany był ankietom: elektronicznym na poziomie Uczelni, jak i Wydziału, ,,papierowym'' na poziomie Uczelni oraz Samorządu Studentów, a ponadto dodatkowej ankietyzacji w ramach niektórych zajęć dydaktycznych. \\
 
-Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju badań. Nawiązując więc do wcześniejszych twierdzeń, potencjalna katastrofa (jak niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców ze względu na brak podjęcia odpowiednich działań i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
+Żaden spośród tych ,,systemów'' ankietyzacji nie posiadał odpowiednich zabezpieczeń, wymaganych do zapewnienia wymierności ich wyników (jak np.~zagwarantowanie, aby nikt nie wziął w ankiecie udziału więcej niż jeden raz, czy uniemożliwienie wypełnienia ankiety przeznaczonej dla innego wydziału, kierunku). Brak wymiernych efektów udziału w tych badaniach, podobnie jak ich mnogość i dezorientacja zwiżana z pytaniem ,,kto tak naprawdę pozyskuje informacje'', działały tu na niekorzyść ankietujących. Ważnym jest też fakt, że istniała tylko jedna, globalna grupa docelowa -- studenci Politechniki Poznańskiej. \\
+
+Ustawa o Szkolnictwie Wyższym wymaga od uczelni wyższych badania nie tylko aktualnej społeczności studenckiej, lecz także jej absolwentów\cite{AP:PoSW05}. Sprawdzane powinny być takie czynniki, jak rozwój karier czy satysfakcja z zapewnianych usług. Niestety, na Politechnice Poznańskiej brak jest odpowiednich narzędzi do prowadzenia tego rodzaju analiz. Nawiązując więc do wcześniejszych twierdzeń, potencjalna katastrofa (jak niezauważony spadek jakości usług, prowadzący do zmniejszenia satysfakcji odbiorców ze względu na brak podjęcia odpowiednich działań i w efekcie spadku prestiżu Uczelni) to jedynie kwestia czasu. \\
 
 \subsection{Proponowane rozwiązanie}
 \label{Chapter112}
 
-Szczęśliwie, problemu sprawnego ankietowania nie można porównywać z węzłem gordyjskim. Najłatwiejszym i -- w opinii autorów niniejszego dokumentu -- najlepiej popartym logicznymi argumentami rozwiązaniem, jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
+Najłatwiejszym i -- w opinii autorów niniejszego dokumentu -- najlepiej popartym logicznymi argumentami rozwiązaniem, jest stworzenie jednego, jednolitego, globalnego i prostego w obsłudze systemu prowadzenia badań i ankiet dla różnych grup docelowych, obejmujących wszystkich aktualnych i byłych studentów Politechniki Poznańskiej. Aby zapewnić dostępność oraz prostotę wdrożenia systemu, który na to pozwoli, zostanie on wykonany za pomocą technologii internetowych, co umożliwi też jego obsługę z użyciem dowolnej popularnej przeglądarki internetowej dostępnej na rynku. \\
 
-W trakcie analizy problemu ustalono, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych Respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych wymiernych korzyści. Wybrane dla iQuest rozwiązanie obejmuje więc też element zachęcający do korzystania z systemu, jakim jest dostęp dla Respondentów do unikalnych materiałów dydaktyczno-naukowych. \\
+W trakcie analizy problemu ustalono, że koniecznym będzie także zapewnienie swojego rodzaju ,,zachęty'' dla potencjalnych respondentów -- o ile bowiem studentowi może zależeć na rozwoju jego uczelni, o tyle absolwent nie będzie czerpał z tego tytułu żadnych wymiernych korzyści. Wybrane dla systemu iQuest rozwiązanie obejmuje więc też element zachęcający do korzystania z systemu, jakim jest udzielanie im dostępu do unikalnych materiałów dydaktyczno-naukowych. \\
 
-Aby zapewnić, że pozyskane dane są prawidłowe, w proponowanym rozwiązaniu znajdą się systemy autoryzacji osób uzyskujących dostęp do badań i ankiet. Jest to jednak jedyny element wymagający sprawdzenia tożsamości Respondenta -- same wyniki będą całkowicie anonimowe. \\
+Aby zapewnić, że pozyskane w badaniach dane są prawidłowe, w proponowanym rozwiązaniu znajdą się systemy autoryzacji osób ankietowanych. Jest to jednak jedyny element wymagający sprawdzenia tożsamości respondenta -- same wyniki będą dla ankietera całkowicie anonimowe. \\
 
 \section{Ograniczenia i zagrożenia dla projektu}
 \label{Chapter12}
 
 Największym ograniczeniem, a zarazem zagrożeniem dla projektu jest kwestia zachęty studentów i absolwentów do korzystania z nowego systemu ankietowania. Popularność całego systemu zależy w głównej mierze właśnie od tego, jakie materiały będą za jego pośrednictwem udostępniane oraz jakie będą warunki uzyskania dostępu do nich. Kolejnym ograniczeniem jest wyznaczony z góry termin zakończenia prac. Na projektowanie, implementację i wdrożenie rozwiązania przewidziany jest jedynie okres od września 2012, do lutego 2013. Uzupełniając tę kwestię o fakt braku wcześniejszego doświadczenia zespołu przy realizacji projektów opartych na technologiach internetowych, spełnienie wszystkich wymagań związanych z projektem może okazać się utrudnione. \\
 
-Ostatecznie jednak, w fazie tworzenia, kwestia zachęty dla Respondentów może być potraktowana jako poboczna. Kwestię ograniczonego czasu można nadrobić, stosując odpowiednie metody zarządzania czasem, zaś brak doświadczenia -- nadrobić w wolnych chwilach. Można więc uznać, że projekt nie posiada żadnych ważkich ograniczeń, czy zagrożeń, które mogłyby uniemożliwić jego realizację. \\
+Ostatecznie jednak, kwestia zachęty dla respondentów -- choć istotna dla powodzenia systemu w przyszłości -- w fazie tworzenia może być potraktowana jako poboczna. Kwestię ograniczonego czasu można natomiast nadrobić, stosując odpowiednie metody zarządzania czasem. Największym zagrożeniem pozostaje więc brak wcześniejszego doświadczenia w tego typu projektach. \\
 
 \section{Cele projektu}
 \label{Chapter13}
 
 Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe przeprowadzanie ankiet wśród studentów i absolwentów uczelni. System ten powinien:
 \begin{itemize}
-%pozafunkcjonalne!!! \item{współpracować z innymi systemami funkcjonującymi na uczelni (np. Sokrates)}
+\item{zapewnić spełnienie przez Uczelnię zapisów Ustawy ,,Prawo o Szkolnictwie Wyższym'' dotyczących monitorowania rozwoju absolwentów Uczelni\cite{AP:PoSW05}}
+\item{ujednolicić uczelniany system pozyskiwania informacji}
 \item{oferować dużą elastyczność:
 \begin{itemize}
 \item{przy definiowaniu różnorodnych ankiet}
@@ -44,7 +47,6 @@ Celem projektu \textit{iQuest} jest zbudowanie systemu umożliwiającego łatwe 
 \item{przy zachęcaniu do uczestnictwa w niej przez potencjalnych Respondentów}
 \end{itemize}}
 \item{oferować rozbudowane możliwości raportowania}
-\item{ujednolicić uczelniany system pozyskiwania informacji}
 \item{odciążyć pracowników uczelni oraz Samorząd Studentów z obowiązków związanych z przeprowadzaniem konwencjonalnych (,,papierowych'') ankiet}
 \end{itemize}
 
