--- a/thesis/06-1-Technologie-LW.tex
+++ b/thesis/06-1-Technologie-LW.tex
@@ -1,5 +1,5 @@
 \subsection{Moodle}
-\emph{Moodle} (roz. \textit{Modular Object-Oriented Dynamic Learning Environment}) -- stanowi podstawę systemu \textit{iQuest}. Jest to popularna (ponad 63 miliony użytkownikiów) platforma e-learningowa o otwartym kodzie źródłowym, napisana w języku \emph{PHP}.Wyboru dokonano ze względu na kilka czynników:
+\emph{Moodle} (roz. \textit{Modular Object-Oriented Dynamic Learning Environment}) -- stanowi podstawę systemu \textit{iQuest}. Jest to popularna (ponad 63 miliony użytkownikiów) platforma e-learningowa o otwartym kodzie źródłowym, napisana w języku \emph{PHP}. Wyboru dokonano ze względu na kilka czynników:
 \begin{itemize}
 \item{Propozycję Architekta, wynikającą z faktu, iż Moodle posiada już implementację wielu wymaganych w \textit{iQuest} mechanizmów, jak np. konta użytkowników, system ról i uprawnień.}
 \item{Oczekiwania Klienta, wynikające z popularności platformy Moodle wśród systemów uczelnianych.}
@@ -42,3 +42,8 @@ Systemu zarządzania projektami \emph{Redmine} wykorzystywany był od samego poc
 \label{Chapter634}
 
 Ze względu na wymagania pozafunkcjonalne, zdecydowano się skorzystać z mechanizmów raportowania oferowanych przez \emph{JasperReports}. Jest to najbardziej popularny silnik raportowania o otwartym kodzie źródłowym (wersja Community). Pozwala na generację raportów, których treść jest określona z dokładnością co do piksela. Generowane raporty można eksportować do popularnych formatów dokumentów, np. HTML, PDF, Excel, Word.
+
+\subsection{JetBrains PhpStorm}
+\label{Chapter635}
+
+PhpStorm jest komercyjnym \emph{IDE} dla języka \emph{PHP} tworzonym przez firmę \emph{JetBrains}. Wykorzystano funkcjonalność odpowiedzialną za generację diagramów \emph{UML} z kodu. Wygenerowane w trybie \emph{Organic} diagramy można zobaczyć w dalszej części pracy.
