--- a/thesis/06-3-Interfejs-KU.tex
+++ b/thesis/06-3-Interfejs-KU.tex
@@ -1,3 +1,9 @@
+%W ramach systemu iQuest, elementy interfejsu ułożone są według następującego schematu:
+%\begin{description}
+%\item Na ekranie wyświetlana jest lista sekcji.
+%\item Wewnątrz każdej sekcji znajduje się lista badań. Pod nią prezentowana jest lista dostępnych materiałów.
+%\end{description}
+
 \section{Interfejs}
 \label{Chapter65}
 
