--- a/thesis/10Dodatki.tex
+++ b/thesis/10Dodatki.tex
@@ -30,6 +30,7 @@ Programiści & Krzysztof Marian Borowiak \\
 
 \noindent
 %Teraz bardzo ważna rzecz -- w tym miejscu piszecie, co kto przygotowywał w tekście pracy inżynierskiej. Prawdopodobnie tutaj będziecie musieli wymienić, które rozdziały został dla Was przygotowane przez kierownika projektu, analityka, architekta lub inną osobę. Oczywiście, piszecie też, za które części dokumentu Wy jesteście odpowiedzialni. To jest ważna, aby ta część była tutaj precyzyjnie przygotowana -- takie są wymogi uczelni oraz też uwzględnienia pracy innych osób.
+%Materiały pozyskane od zespołu zarządzającego - \cite{Redmine:ProjDocs}.
 
 \noindent
 
