--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -1,3 +1,22 @@
+@misc{AP:PoSW05,
+title =			{{Ustawa z dnia 27 lipca 2005 r. -- Prawo o szkolnictwie wyższym}},
+note =			{{Dz. U. Nr 164, poz. 1365, z późn. zm., Art. 13a.}},
+year =			{{2005}}
+}
+
+@misc{AP:SPP11,
+title =			{{Statut Politechniki Poznańskiej}},
+note =			{{Uchwała Nr 154, \textsection{83}, ust. 5}},
+year =			{{2011}}
+}
+
+@unpublished{Redmine:ProjDocs,
+author = {M. Domański, B. Matuszyk},
+title = {Dokumentacja systemu iQuest},
+note = {Materiały zamieszczone w ramach platformy Redmine w domenie \url{http://conaiten.put.poznan.pl}},
+year = {2012-2013}
+}
+
 %@mastersthesis{BIS:BIS10,
 %  author =      {{P. Skrzypek, D. Lubański, R. Miłecki, T. Paszek}},
 %  title = 		{{BIS-1: Pilotażowa wersja systemu informacji bibliometrycznych}},
