--- a/thesis/thesis-bachelor-polski.tex
+++ b/thesis/thesis-bachelor-polski.tex
@@ -12,6 +12,7 @@
 \usepackage{verbatim}
 \usepackage{pdflscape}
 \usepackage{longtable}
+\usepackage{multirow}
 
 \hyphenation{roz-sze-rza-ją-cych}
 
@@ -60,7 +61,7 @@
 \input{12DodatkiC.tex}
 
 % Bibliography (books, articles) starts here.
-\bibliographystyle{plunsrt}{\raggedright\sloppy\small\bibliography{bibliography}}
+\bibliographystyle{plain}{\raggedright\sloppy\small\bibliography{bibliography}}
 
 % Colophon is a place where you should let others know about copyrights etc.
 \ppcolophon
