--- a/thesis/07Jakosc.tex
+++ b/thesis/07Jakosc.tex
@@ -4,49 +4,81 @@
 \section{Testy i weryfikacja jakości oprogramowania}
 \label{Chapter71}
 
-\subsection{Testy jednostkowe}
+\subsection{Wstęp}
 \label{Chapter711}
 
-%Tutaj piszemy o testach jednostkowych -- jak je zrobiliśmy oraz jakie były problemy, wnioski, które się pojawiły.
+Testy i weryfikacja jakości oprogramowania realizowana była na trzech poziomach: testów jednostkowych (dla logiki) oraz automatycznych i manualnych testów akceptacyjnych. Te ostatnie realizowane były nie tylko w zgodzie z dokumentem \textit{MAT}\cite{Redmine:ProjDocs}, ale też intuicyjnie, poprzez zwykłe korzystanie z systemu.
 
-\subsection{Testy integracyjne}
+\subsection{Testy jednostkowe}
 \label{Chapter712}
 
-%Podrozdział opcjonalny (bo nie wiem, czy wszyscy robią takie testy). Tutaj piszemy o testach integracyjnych -- jak je zrobiliśmy oraz jakie były problemy, wnioski, które się pojawiły.
+Testy jednostkowe zostały wykonane jako pierwsze i traktowane były z wysokim priorytetem. Realizowane były z użyciem klas PHPUnit, stosowanych powszechnie m.in.~przy testowaniu wtyczek do platformy Moodle. Testy te były kluczowe dla rozwoju logiki systemu iQuest. Uruchamiane są za pomocą przygotowanego skryptu \textit{tests.sh}, uruchamiającego je kolejno. Część testów operuje na systemie w trybie produkcyjnym, część na trybie testowym, obsługującym tzw. ,,atrapy'' (ang. \definicja{mock}), imitujące działanie systemów zewnętrznych. \\
+
+Do stworzenia testów posłużyło środowisko Eclipse z dodatkiem PHP Development Tools. To pozwoliło na znaczące usprawnienie pracy przy realizacji tego zadania, względem stosowania zwykłych edytorów tekstowych, w tym tych poświęconych językowi PHP, jak np. gPHPEdit. \\
+
+Przy realizacji pierwszego wydania, za testy jednostkowe w pełni odpowiadał jeden z członków zespołu programistów. W wydaniu drugim, rolę tę przejął programista realizujący logikę systemu, stosując zamiennie dwie techniki programowania, w tym jedną opartą o metodę TDU (ang. \definicja{Test-Driven Development} - rozwój w oparciu o testy). Pozwoliło to na znaczące zmniejszenie czasochłonności tego zadania.
+
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=0.9\textwidth]{figures/lw/tests.pdf} 
+\end{center}
+\caption{Struktura klas testujących}
+\label{fig:tests}
+\end{figure}
 
 \subsection{Testy akceptacyjne}
 \label{Chapter713}
 
-%Tutaj piszemy o testach akceptacyjnych -- jak je zrobiliśmy oraz jakie były problemy, wnioski, które się pojawiły. Tutaj zwykle pojawią się testy akceptacyjne przygotowane przez Waszych kierowników, ale także różne opisy, w tym -- jeśli jest to zrobione -- automatycznych testów. 
+Testy akceptacyjne rozpatrywane są na dwóch poziomach: automatycznym i manualnym. Różnica polega jedynie na tym, kto (lub co) wykonuje test - komputer z odpowiednim oprogramowaniem, czy człowiek.
 
-%Poniżej przedstawiono Manualne Testy Akceptacyjne:
+\subsubsection{MAT}
+\label{Chapter7131}
 
-%\matbegin{MAT01}{Nazwa testu pierwszego}
-%\matpres
-%\matpre{Warunek początkowy 1}
-%\matpre{Warunek początkowy 2}
-%\matsteps
-%\matstep{1}{Polecenie pierwsze}{Odpowiedź systemu}
-%\matstep{2}{Polecenie drugie}{Odpowiedź systemu}
-%\matstep{3}{Polecenie trzecie}{Odpowiedź systemu}
-%\matremark{Jakaś uwaga.}
-%
-%\matbegin{MAT02}{Nazwa testu drugiego}
-%\matpres
-%\matpre{Warunek początkowy 1}
-%\matpre{Warunek początkowy 2}
-%\matsteps
-%\matstep{1}{Polecenie pierwsze}{Odpowiedź systemu}
-%\matstep{2}{Polecenie drugie}{Odpowiedź systemu}
-%\matstep{4}{Polecenie trzecie}{Odpowiedź systemu}
-%\matremark{Brak}
+Poniżej przedstawiono Manualne Testy Akceptacyjne:
+
+\matbegin{MAT01}{Nazwa testu pierwszego}
+\matpres
+\matpre{Warunek początkowy 1}
+\matpre{Warunek początkowy 2}
+\matsteps
+\matstep{1}{Polecenie pierwsze}{Odpowiedź systemu}
+\matstep{2}{Polecenie drugie}{Odpowiedź systemu}
+\matstep{3}{Polecenie trzecie}{Odpowiedź systemu}
+\matremark{Jakaś uwaga.}
+
+\matbegin{MAT02}{Nazwa testu drugiego}
+\matpres
+\matpre{Warunek początkowy 1}
+\matpre{Warunek początkowy 2}
+\matsteps
+\matstep{1}{Polecenie pierwsze}{Odpowiedź systemu}
+\matstep{2}{Polecenie drugie}{Odpowiedź systemu}
+\matstep{4}{Polecenie trzecie}{Odpowiedź systemu}
+\matremark{Brak}
+
+\subsubsection{AAT}
+\label{Chapter7131}
+
+Automatyczne testy akceptacyjne realizowano w zgodzie z testami manualnymi i operując na tych samych wytycznych. Nagrywanie testów odbywało się za pomocą oprogramowania Selenium IDE, udostępnianego w formie rozszerzenia dla przeglądarki Mozilla Firefox. Pierwotnie, testy były konwertowane do języka Java, celem uruchamiania ich z poziomu języka Java, oferującego sporą swobodę przy projektowaniu warunków początkowych i końcowych dla testów. Problemy, jakie wynikały z takiego działania, opisane zostały w rozdziale \ref{Chapter6}. Na ich podstawie zdecydowano o pozostaniu w obrębie Selenium IDE, które samo w sobie również umożliwia automatyzację w wysokim stopniu. Aby dodatkowo ułatwić zadanie, przygotowany został skrypt ustawiający bazę danych w stan początkowy dla realizacji testów.
 
 \subsection{Inne metody zapewniania jakości}
 \label{Chapter714}
 
-%Jeśli testowaliście projekt w jakiś inny sposób, mieliście inne formy weryfikacji (np.~rzucanie komputerem o ściany czy z drugiego miejsca), to tutaj to opisujecie. Prawdopodobnie dobrze będzie opisać tutaj wszelkie testy dla interfejsu, jeśli np.~testowaliście użytkowników i sam system pod tym kątem.
+Celem zapewnienia jak najwyższej jakości oprogramowania, było ono testowane -- w kontrolowanych warunkach -- na różnorakich maszynach. Co prawda, lokalne serwery developerskie pracowały w oparciu o system Ubuntu 12.04 LTS, z serwerem Apache i systemem zarządzania bazą danych PostgreSQL, jednak maszyny klienckie były już znacznie bardziej różnorodne.
 
-\section{Sposób uruchomienia i~działania systemu}
-\label{Chapter72}
+System przetestowano na zbiorze komputerów stacjonarnych klasy PC oraz równoważnych laptopów, z użyciem systemów Windows i Linux. Realizowano je także na laptopach i netbookach klasy PC oraz Macintosh, również pod kontrolą systemów Windows i Linux, oraz - w przypadku tej ostatniej klasy - MacOS. Ponadto, przetestowano trzy główne platformy mobilne (Android, iOS, WP7.x) poprzez dostęp do systemu z poziomu telefonów komórkowych.
 
-%Tutaj można napisać jak przygotować system do działania i jak przeprowadzić konfigurację. Prawdę mówiąc, nie wiem, czy to powinno się tutaj znaleźć, ale być może warto, dlatego na wszelki wypadek to umieszczam.
+Wspomniane wyżej maszyny pracowały pod kontrolą następujących systemów operacyjnych:
+\begin{itemize}
+\item{Windows XP Professional SP3 32-bit + Internet Explorer 7}
+\item{Windows Vista Business SP2 32-bit + Internet Explorer 8}
+\item{Windows 7 Professional SP1 64-bit + Mozilla Firefox + Google Chrome}
+\item{Windows 8 Professional 64-bit + Internet Explorer 10 + Google Chrome}
+\item{Ubuntu 12.04 64-bit + Mozilla Firefox + Google Chrome}
+\item{Mac OS X + Apple Safari}
+\item{Google Android 2.2, 2.3, 4.0, 4.1}
+\item{iOS (iPhone 4S)}
+\item{Windows Phone 7.5 (Nokia Lumia 710)}
+\end{itemize}
+
+Na podstawie powyższych testów, utworzono dwa raporty: ,,wygląd i działanie systemu iQuest na platformach mobilnych'' oraz ,,wygląd i działanie systemu iQuest w różnych konfiguracjach system-przeglądarka'', udostępnione w ramach systemu zarządzania projektem\cite{Redmine:ProjDocs}. Wynika z nich, że system iQuest posiada bardzo wysoki współczynnik przenośności.
